@@ -1,2 +1,3 @@
 --os:standalone
 --deadCodeElim:on
+--gc:none
