@@ -23,6 +23,11 @@ News
     used: ``import "scene/2d/sprite"``. The former code never was valid Nim.
   - The Windows API wrapper (``windows.nim``) is now not part of the official
     distribution anymore. Instead use the ``oldwinapi`` Nimble package.
+  - There is now a clear distinction between ``--os:standalone``
+    and ``--gc:none``. So if you use ``--os:standalone`` ensure you also use
+    ``--gc:none``. ``--os:standalone`` without ``--gc:none`` is now a version
+    that doesn't depend on any OS but includes the GC. However this version
+    is currently untested!
 
 
   Library additions
